# tracy-gizmos

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: Cargo.toml  README.md  frames.rs  plots.rs  usage.rs
examples/examples/: attributes.rs  frames.rs  memory.rs  plots.rs  usage.rs
src/: color.rs  lib.rs  plot.rs
sys/: Cargo.toml  README.md  build.rs
sys/src/: bindings.rs  lib.rs
tracy-gizmos/: Cargo.toml
tracy-gizmos-attributes/: Cargo.toml  README.md
tracy-gizmos-attributes/src/: lib.rs
tracy-gizmos-sys/: Cargo.toml  README.md  build.rs
tracy-gizmos/src/: lib.rs  memory.rs  plot.rs
