[workspace]
members = [
	"tracy-gizmos",
	"tracy-gizmos-sys",
	"tracy-gizmos-attributes",
	"examples",
]
resolver = "2"

[workspace.package]
authors    = ["Denys Mentiei <endden@gmail.com>"]
repository = "https://github.com/den-mentiei/tracy-gizmos"
license    = "MIT OR Apache-2.0"
edition    = "2021"
readme     = "README.md"
