[package]
name       = "tracy-gizmos-sys"
version    = "0.10.0"
authors    = ["Denys Mentiei <endden@gmail.com>"]
license    = "MIT OR Apache-2.0"
repository = "https://github.com/den-mentiei/tracy-gizmos"
edition    = "2021"

[features]
default           = []
crash-handler     = []
system-tracing    = []
context-switch    = []
sampling          = []
callstack-inlines = []
hw-counters       = []
code-transfer     = []
vsync             = []
no-exit           = []
broadcast         = []
only-localhost    = []
only-ipv4         = []

[build-dependencies]
cc      = "1.0"
bindgen = { version = "0.69.1", optional = true, default-features = false, features = ["runtime"] }