[package]
name                 = "tracy-gizmos-attributes"
version              = "0.0.1"
authors.workspace    = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true

[lib]
proc-macro = true

[dev-dependencies]
tracy-gizmos = { path = "../tracy-gizmos", version = "0.0.6" }
